Added full security enhancements: 2FA, brute-force lockout, GeoIP alerts, audit logs, JWT

--- a/.env
+++ b/.env
@@ -20,3 +20,24 @@ ADMIN_PASSWORD=admin123
 DEFAULT_MODEL=llama3-8b-8192
 VECTOR_DB_PATH=./vector_store
 EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+
+
+# ------------------------------
+# Mail / SMTP settings for security alerts
+# ------------------------------
+SMTP_SERVER=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your-email@example.com
+SMTP_PASSWORD=your-email-password
+ADMIN_EMAIL=admin@example.com
+
+# ------------------------------
+# IP Geolocation API
+# ------------------------------
+GEOIP_API_KEY=your_geoip_api_key
+
+# ------------------------------
+# Brute-force login lockout
+# ------------------------------
+MAX_LOGIN_ATTEMPTS=5
+LOCKOUT_DURATION_MINUTES=15
